calibration sur les morts et les hospitalisations

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -4,6 +4,10 @@ set(SOURCES
     ODE.cpp
     functions.cpp
     integrator.cpp
+    read_data.cpp
+    blackbox.cpp
+    fonction_obj.cpp
+    read_data.cpp
     
     )
 
