--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "forward_list": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "codecvt": "cpp",
+        "cfenv": "cpp"
     }
 }
