--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,9 @@
         "forward_list": "cpp",
         "unordered_set": "cpp",
         "codecvt": "cpp",
-        "cfenv": "cpp"
+        "cfenv": "cpp",
+        "bitset": "cpp",
+        "complex": "cpp",
+        "typeindex": "cpp"
     }
 }
