--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,5 +71,6 @@
         "bitset": "cpp",
         "complex": "cpp",
         "typeindex": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
