--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,12 @@
         "cfenv": "cpp",
         "bitset": "cpp",
         "complex": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "strstream": "cpp",
+        "source_location": "cpp",
+        "shared_mutex": "cpp",
+        "charconv": "cpp"
     },
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "enabled",
+    "cmake.configureOnOpen": true
 }
