--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,17 @@
 # preciser la version minimale de cmake requise
 cmake_minimum_required(VERSION 3.16.3)
 
-
+set(CMAKE_CXX_COMPILER "/usr/bin/clang++-17")
 # Nom du projet
 project(POO LANGUAGES CXX)
+
+
+
+
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # compilation en mode debug
-set(CMAKE_BUILD_TYPE Debug)
 
 find_package(GSL REQUIRED)
 
@@ -44,6 +47,13 @@ set(MAIN
 
 add_executable(main ${MAIN})
 
+target_compile_options(main PRIVATE -fsanitize=address)
+target_link_options(main PRIVATE -fsanitize=address)
+target_compile_options(main PRIVATE -fsanitize=leak)
+target_link_options(main PRIVATE -fsanitize=leak)
+target_compile_options(main PRIVATE -fsanitize=undefined)
+target_link_options(main PRIVATE -fsanitize=undefined)
+
 target_link_libraries(main PUBLIC sources config_projet GSL::gsl GSL::gslcblas)
 
 if(OpenMP_CXX_FOUND)
@@ -52,14 +62,9 @@ else()
   target_link_libraries(main PUBLIC nomadAlgos nomadUtils nomadEval)
 endif()
 
-
-
-
-
-
 # Et pour que l'exécutable fonctionne, il faut lui indiquer les bibliothèques dont il dépend
 #target_link_libraries(main sources1)
 
-target_compile_options(main PUBLIC -g -Wall -Wextra -pedantic )
+target_compile_options(main PUBLIC -fsanitize=leak -fsanitize=undefined -fsanitize=address -g -Wall -Wextra -pedantic )
 
 
