--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,19 @@
     // Pointez pour afficher la description des attributs existants.
     // Pour plus d'informations, visitez : https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Launch",
+            "program": "${workspaceFolder}/build/main",
+            "args": ["2"],
+            "cwd": "${workspaceFolder}/build"
+        }
+
+
+    ],
+    
+
+
 }
